ecmascript/parser/tests/typescript-errors/tsc/expressions/optionalChaining/taggedTemplateChain/taggedTemplateChain/input.ts.stderr
error: Expected ident
 --> $DIR/tests/typescript-errors/tsc/expressions/optionalChaining/taggedTemplateChain/taggedTemplateChain/input.ts:2:4
  |
2 | a?.`b`;
  |    ^

